objects/EnvironmentVariable__c.object
<CustomObject>
    <fields>
        <fullName>IsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a variable's value should be encrypted, useful if storing passwords or other sensitive information</description>
        <inlineHelpText>Encrypts the variable's value</inlineHelpText>
        <label>Is Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines if the custom field is editable through the Environments tab interface</description>
        <inlineHelpText>This field determines if the custom field is editable through the Environments tab interface</inlineHelpText>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Express</fullName>
                    <default>true</default>
                    <label>Broker Express</label>
                </value>
                <value>
                    <fullName>EGP Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Name__c</fullName>
        <label>Variable Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Module__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Endpoint</fullName>
                </value>
                <value>
                    <fullName>RequestMethod</fullName>
                </value>
                <value>
                    <fullName>RequestTimeout</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Transaction ID</fullName>
                </value>
                <value>
                    <fullName>EGP_EndPoint</fullName>
                </value>
                <value>
                    <fullName>EGP_ClientCertificateName</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Contains variables used in the code that need to be changed dynamically. Instead of making changes to the code in order to change a variable we can make the change via this portal without a code deployment.</description>
    <label>Environment Variable</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>